# GPGPU_VoxelEngine

./: CMakeLists.txt  README.md  conanfile.py
shaders/Vulkan/: compile.bat  iso_field.comp  smoothrender_construct.comp  unify_fields.comp
shaders/Vulkan/voxel/: heightmap_field.spv  iso_field.spv  smoothrender_construct.spv  smoothrender_createmesh.spv  smoothrender_createvertlist.spv  smoothrender_mark.spv  smoothrender_stitch.spv  smoothrender_stitch_async.spv  unify_fields.spv
shaders/include/samplers/: Terrain_Sampler.inc
source/: CMakeLists.txt
source/executable/: CMakeLists.txt  exe_main.cpp
source/private/: CMakeLists.txt  IVoxelBuilder.h  Logger.cpp  Logger.h  SmoothVoxelBuilder.cpp  SmoothVoxelBuilder.h  shared_structures.h  stdafx.h
source/public/: CMakeLists.txt  ChunkProcessor.h  IVoxelBuilder.h  UE5_Interface.cpp  UE5_Interface.h  dll_main.cpp  dll_main.h
